[tool.poetry]
name = "shuttle-light"
version = "0.1.0"
description = "Control an Elgato Ring Light with a ShuttleXpress"
authors = ["Rob Romito <rob@robertromito.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "shuttle_light"}]

[tool.poetry.dependencies]
python = "^3.10"
pyusb = "^1.2"
requests = "^2.28"
rich = "^12.6"
typer = "^0.6"

[tool.poetry.dev-dependencies]
black = "^22.10"
flake8 = "^5.0"
pytest = "^7.1"
httpie = "^3.2"

[tool.poetry.scripts]
shuttlelight = "shuttle_light.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
